--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,20 @@
     <artifactId>spring-boot-starter-security</artifactId>
 </dependency>
 
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.8.0</version>
             <scope>test</scope>
         </dependency>
+		<!-- Swagger / OpenAPI for Spring Boot 3 -->
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.5.0</version>
+</dependency>
+
     </dependencies>
 
 	<build>
